Implement data-service logic
